Refactor community platform UI and data flows